plugins {
	id 'java'
	id 'org.springframework.boot' version '3.4.1'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'kr.co'
version = '0.0.1-BETA'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.5.0'

	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect'

	compileOnly 'org.projectlombok:lombok'
	runtimeOnly 'org.postgresql:postgresql'
	annotationProcessor 'org.projectlombok:lombok'

	implementation platform('software.amazon.awssdk:bom:2.20.15')
	implementation 'software.amazon.awssdk:core:2.20.15'
	implementation 'software.amazon.awssdk:s3:2.20.15'

	implementation "org.testcontainers:localstack:1.16.3"
	testImplementation "cloud.localstack:localstack-utils:0.2.20"

	// oauth 의존성
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
	// 설정값 더 구조적으로 관리하기 위한 의존성
	implementation 'org.springframework.boot:spring-boot-configuration-processor'
	// webclinet
	implementation 'org.springframework.boot:spring-boot-starter-webflux'
	// entitymanager 연결
	implementation 'org.javassist:javassist:3.15.0-GA'
	// google people
	implementation 'com.google.apis:google-api-services-people:v1-rev20210419-1.31.0'
	// wireMock
	testImplementation 'org.wiremock:wiremock-standalone:3.9.1'

	testImplementation 'com.h2database:h2'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	testImplementation 'org.springframework.security:spring-security-test'
}


tasks.named('test') {
	useJUnitPlatform()
	testLogging {
		events "passed", "skipped", "failed"
	}
}

bootJar {
	enabled = true
}

jar {
	enabled = false
}